# mosers_powers

./: .gitattributes  .gitignore  100000.cp  100k.txt  2000000.cp  300000.cp  500000.cp  Cargo.toml  LICENSE  README.md
benches/: 280.rs  qrt_100.rs
cps/: 1000000.cp  10000000.cp  110000.cp  120000.cp  130000.cp  140000.cp  150000.cp  15000000.cp  20000000.cp  3000000.cp  4000000.cp  5000000.cp  6000000.cp  7000000.cp  8000000.cp  9000000.cp
src/: io.rs  lib.rs  main.rs
