[package]
name = "mosers_powers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rug]
version = "1.19.2"
default-features = false
features = ["integer"]

[profile.release]
debug = true