[package]
name = "mosers_powers"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
lazy_static = "1.4.0"

[dependencies.rug]
version = "1.22.0"
default-features = false
features = ["integer"]